Removed position of javascript
The lower position of script call, the best for performance

--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html ng-app ng-csp>
   <head>
-    <script src="angular.min.js"></script>
-    <script src="controller.js"></script>
     <link rel="stylesheet" href="todo.css">
   </head>
   <body>
@@ -22,5 +20,9 @@
         <input class="btn-primary" type="submit" value="add">
       </form>
     </div>
+    <script src="angular.min.js"></script>
+    <script src="controller.js"></script>
+    <script src="app.js"></script>
+    <script src="dnd.js"></script>
   </body>
 </html>
