--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf8"  />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <nav>
@@ -28,10 +28,10 @@
         <input class="btn-primary" type="submit" value="add">
       </form>
     </div>
-    <script src="angular.min.js"></script>
-    <script src="controller.js"></script>
-    <script src="timer.js"></script>
-    <script src="app.js"></script>
-    <script src="dnd.js"></script>
+    <script src="js/angular.min.js"></script>
+    <script src="js/controller.js"></script>
+    <script src="js/timer.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/dnd.js"></script>
   </body>
 </html>
