--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html ng-app ng-csp>
+<!DOCTYPE html>
+<html ng-app="naturalLog">
   <head>
     <meta charset="utf8"  />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -29,6 +29,8 @@
         </form>
       </div>
       <script src="js/angular.min.js"></script>
+      <script src="js/angular-cookies.min.js"></script>
+      <script src="js/angularLocalStorage.js"></script>
       <script src="js/controller.js"></script>
       <script src="js/timer.js"></script>
       <script src="js/sub_panel.js"></script>
