--- a/app/index.html
+++ b/app/index.html
@@ -12,11 +12,9 @@
       <ul>
         <form>
           <li ng-repeat="log in logs">
-            <label>
-              <input type="radio" name="note_title" value="{{log.uuid}}"  ng-model="$parent.noteFilter"></input>
-              {{log.note_title}}
-              <button ng-click="deleteLog(log.uuid)" class="icon-remove remove"></button>
-            </label>
+            <input type="radio" name="note_title" value="{{log.uuid}}" id="{{log.uuid}}" ng-model="$parent.noteFilter"></input>
+            <label for="{{log.uuid}}">{{log.note_title}}</label>
+            <button ng-click="deleteLog(log.uuid)" class="remove"></button>
           </li>
         </form>
         <li>
@@ -28,14 +26,14 @@
       </ul>
     </div>
     
-    <div id="MainPanel" class="isOpened">
+    <div id="MainPanel" >
       <nav id="SubPanelCaller">
-        <h1>Natural Log <button ng-click="resetLog();">Reset</button><button ng-click="downloadLog();">Download</button></h1>
+        <h1>Natural Log <!--button ng-click="resetLog();">Reset</button--><button ng-click="downloadLog();" class="download">Download Log</button></h1>
       </nav>
       <div class="container">
         <div class="logbody" ng-repeat="l in logs | filter: {uuid: noteFilter}">
           <table>
-            <tr><td colspan="2"><h2>{{l.note_title}} {{l.uuid}}</h2></td></tr>
+            <tr><td colspan="2"><h2>{{l.note_title}}</h2></td></tr>
             <tbody ng-repeat="date_note in l.date_notes">
               <tr><td colspan="2"><h3>{{date_note.date}}</h3></td></tr>
               <tr ng-repeat="n in date_note.notes">
