--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
     
     <div id="MainPanel" >
       <nav id="SubPanelCaller">
-        <h1>Natural Log <button ng-click="resetLog();">Reset</button><button ng-click="downloadLog();" class="download">Download Log</button></h1>
+        <h1>Natural Log <!--button ng-click="resetLog();">Reset</button--><button ng-click="downloadLog();" class="download">Download Log</button></h1>
       </nav>
       <div class="container">
         <div class="logbody" ng-repeat="l in logs | filter: {uuid: noteFilter}">
